<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/lyt_passing"
    android:background="@android:color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<ScrollView
    android:id="@+id/parent"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/type5_text_size"
            android:textColor="@color/sub_text"
            android:id="@+id/tvSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="20.0dip"
            android:text="@string/tvEnterSource"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tvSearch"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:id="@+id/layoutSwitchBetween"
                android:orientation="horizontal">
                <TextView
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/sub_text"
                    android:id="@+id/tvSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginTop="20.0dip"
                    android:text="@string/tvSwitch"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true" />
                <ImageButton
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="15.0dip"
                    android:background="@drawable/ic_action_swap"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"/>



            </LinearLayout>


        </RelativeLayout>

        <tr.hilal.trackmybus.CustomAutoCompleteTextView
            android:textSize="@dimen/autotextsize"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/etStopName"
            android:background="@drawable/round_rect_shape"
            android:paddingRight="40.0dip"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="15.0dip"
            android:hint="@string/tvAutoSource"
            android:ems="10"
            android:layout_below="@+id/tvSearch"
            android:layout_alignParentRight="true"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionDone" />

        <ImageButton
            android:id="@+id/btClear"
            android:background="@android:color/transparent"
            android:paddingTop="8.0dip"
            android:paddingBottom="8.0dip"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5.0dip"
            android:src="@drawable/clear"
            android:scaleType="fitCenter"
            android:layout_alignTop="@+id/etStopName"
            android:layout_alignRight="@+id/etStopName"
            android:layout_alignBottom="@+id/etStopName"
            android:contentDescription="@string/dummy" />

        <View
            android:id="@+id/vDottedLine"
            android:background="@android:color/darker_gray"
            android:layout_width="wrap_content"
            android:layout_height="1.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_below="@id/etStopName"
            android:layout_alignParentLeft="true" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/btn_height"
            android:gravity="center_horizontal"
            android:layout_marginTop="10.0dip"
            android:layout_below="@id/vDottedLine">
            <Button
                android:enabled="false"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:id="@+id/btSearchPassingby"
                android:background="@drawable/btn_selector"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="180dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:text="SEARCH"
                android:singleLine="false"
                />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>