<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/lyt_parent_landing"
    android:background="@android:color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="10.0dip">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/type5_text_size"
            android:textColor="@color/sub_text"
            android:id="@+id/tvSearchHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="20.0dip"
            android:text="SOURCE"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tvSearchHeading"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:id="@+id/layoutSwitchPassing"
                android:orientation="horizontal">
                <TextView
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/sub_text"
                    android:id="@+id/tvSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginTop="20.0dip"
                    android:text="@string/tvSwitch"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true" />
                <ImageButton
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="15.0dip"
                    android:background="@drawable/ic_action_pass"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"/>



            </LinearLayout>


        </RelativeLayout>
        <!--
            source
        -->
        <tr.hilal.trackmybus.CustomAutoCompleteTextView
            android:textSize="@dimen/autotextsize"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/etSource"
            android:background="@drawable/round_rect_shape"
            android:paddingRight="40.0dip"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="10.0dip"
            android:minHeight="38.0dip"
            android:hint="Enter Name or Code"
            android:ems="10"
            android:layout_below="@+id/tvSearchHeading"
            android:layout_alignLeft="@+id/tvSearchHeading"
            android:layout_alignParentRight="true"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext" />
        <!--
        image button for clear
                -->
        <ImageButton
            android:id="@+id/btClearSource"
            android:background="@android:color/transparent"
            android:paddingTop="8.0dip"
            android:paddingBottom="8.0dip"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5.0dip"
            android:src="@drawable/clear"
            android:scaleType="fitCenter"
            android:layout_alignTop="@+id/etSource"
            android:layout_alignRight="@+id/etSource"
            android:layout_alignBottom="@+id/etSource"
            android:contentDescription="@string/dummy" />
        <!--
            seperator
                -->
        <View
            android:id="@+id/vDottedLineLeft"
            android:background="@android:color/darker_gray"
            android:layout_width="wrap_content"
            android:layout_height="1.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_toLeftOf="@+id/btInterchange"
            android:layout_below="@id/etSource"
            android:layout_alignParentLeft="true" />
        <!--
        image button for interchange
                -->
        <ImageButton
            android:id="@+id/btInterchange"
            android:background="@android:color/white"
            android:visibility="invisible"
            android:layout_width="30.0dip"
            android:layout_height="30.0dip"
            android:layout_marginTop="5.0dip"
            android:src="@drawable/interchange"
            android:scaleType="fitXY"
            android:layout_below="@+id/etSource"
            android:layout_centerHorizontal="true" />
        <View
            android:id="@+id/vDottedLineCenter"
            android:background="@android:color/darker_gray"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:layout_height="1.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_toRightOf="@+id/vDottedLineRight"
            android:layout_toLeftOf="@+id/vDottedLineLeft"
            android:layout_below="@id/etSource"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"/>
        <View
            android:id="@+id/vDottedLineRight"
            android:background="@android:color/darker_gray"
            android:layout_width="wrap_content"
            android:layout_height="1.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_toRightOf="@+id/btInterchange"
            android:layout_below="@id/etSource"
            android:layout_alignParentRight="true" />


        <!--
        textview for destination
                -->
        <TextView
            android:textSize="@dimen/type5_text_size"
            android:textColor="@color/sub_text"
            android:id="@+id/tvDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="15.0dip"
            android:text="DESTINATION"
            android:layout_below="@+id/vDottedLineLeft"
            android:layout_alignLeft="@+id/tvSearchHeading"
            android:layout_alignParentLeft="true" />
        <!--
        edit text for destination
                -->
        <tr.hilal.trackmybus.CustomAutoCompleteTextView
            android:textSize="@dimen/autotextsize"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/etDestination"
            android:background="@drawable/round_rect_shape"
            android:paddingRight="40.0dip"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="10.0dip"
            android:minHeight="38.0dip"
            android:hint="Enter Name or Code"
            android:ems="10"
            android:layout_below="@+id/tvDestination"
            android:layout_alignLeft="@+id/tvDestination"
            android:layout_alignParentRight="true"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionDone" />
        <!--
            button for clear edit text for destination
                -->
        <ImageButton
            android:id="@+id/btClearDestination"
            android:background="@android:color/transparent"
            android:paddingTop="8.0dip"
            android:paddingBottom="8.0dip"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5.0dip"
            android:src="@drawable/clear"
            android:scaleType="fitCenter"
            android:layout_alignTop="@+id/etDestination"
            android:layout_alignRight="@+id/etDestination"
            android:layout_alignBottom="@+id/etDestination"
            android:contentDescription="@string/dummy" />

        <View
            android:id="@+id/seperator2"
            android:background="@android:color/darker_gray"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_below="@+id/etDestination" />

        <Spinner
            android:id="@+id/spinnerClass"
            android:layout_width="match_parent"
            android:layout_marginTop="5.0dip"
            android:layout_height="@dimen/edt_height"
            android:background="@drawable/spinner_background"
            android:layout_marginRight="30.0dip"
            android:layout_marginLeft="30dp"
            android:minHeight="38.0dip"
            android:entries="@array/class_arrays"
            android:prompt="@string/class_prompt"
            android:layout_below="@+id/seperator2"/>
        <!--
        seperator
                -->
        <View
            android:id="@+id/seperator"
            android:background="@android:color/darker_gray"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_below="@+id/spinnerClass" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="7.0dip"
            android:gravity="center_horizontal"
            android:layout_below="@+id/seperator">
            <Button
                android:enabled="false"
                android:textSize="@dimen/type6_text_size"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:id="@+id/btSearch"
                android:background="@drawable/btn_selector"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="180dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:text="SEARCH"
                android:singleLine="false"

                />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
    </RelativeLayout>